// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Modal - Portal render - with target 1`] = `
<Portal>
  <Portal
    containerInfo={
      <div>
        <p>
          Content
        </p>
      </div>
    }
  >
    <p>
      Content
    </p>
  </Portal>
</Portal>
`;

exports[`#Modal - Portal render - with target 2`] = `
<div
  id="modal"
>
  <div>
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`#Modal - Portal render - with target 3`] = `null`;

exports[`#Modal - Portal render - with target 4`] = `
<div
  id="modal"
/>
`;

exports[`#Modal - Portal render - without target 1`] = `
<Portal>
  <Portal
    containerInfo={
      <div>
        <p>
          Content
        </p>
      </div>
    }
  >
    <p>
      Content
    </p>
  </Portal>
</Portal>
`;

exports[`#Modal - Portal render - without target 2`] = `null`;

exports[`#Modal - Portal render - without target 3`] = `null`;

exports[`#Modal - Portal render - without target 4`] = `null`;
